# libsndfile-cmake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h
